Update openapi, fix tests
